--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -172,6 +172,45 @@
      <string>Statistics</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="SaveSystemButton">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>820</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save System</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ImportSystemButton">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>820</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Import System</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>820</y>
+      <width>80</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
